# tokio-chat

./: .gitignore  Cargo.toml  LICENSE
protocol/: Cargo.toml
protocol/src/: lib.rs  notification.rs
protocol/src/crypto/: content_box.rs  context.rs  mod.rs
protocol/src/messaging/: chat.rs  direct.rs  message.rs  mod.rs  transport.rs  user.rs
protocol/src/transport/: handshake.rs  io.rs  mod.rs
