[workspace]
members = [
    "server",
    "client",
    "protocol",
]

[workspace.dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = {version = "0.7.4", features = ["full"] }

anyhow = "1.0.65"
bincode = "1.3.3"
serde = {version = "1.0.130", features = ["derive"]}
snow = "0.9.0"
aes-gcm = "0.10.0"
lazy_static = "1.4.0"
x25519-dalek = "1.2.0"
curve25519-dalek = "3.2.1"
rand_core = "0.6.3"
