[package]
name = "protocol"
version = "0.1.0"
edition = "2021"


[dependencies]
serde.workspace = true
snow.workspace = true
bincode.workspace = true
anyhow.workspace = true
aes-gcm.workspace = true
lazy_static.workspace = true
curve25519-dalek.workspace = true
x25519-dalek.workspace = true
rand_core.workspace = true
tokio.workspace = true
itertools.workspace = true
